test/TestPhases/typechecker/valid/constants.blc
const tt = true

@[EntryPoint]
activity A ()()
    const loctt = true
    const x = tt and loctt or false
    var y = not x
    await false
end