test/TestPhases/typechecker/invalid/prevOnParam.blc
@[EntryPoint]
activity A(y: int32)()
    var x = prev y
    await true
end